<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/s_a_l_p"
            android:gravity="center"

            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/ed_suaMaLop"
            android:layout_width="match_parent"
            android:maxLength="6"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/m_l_p"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/ed_suaTenLop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/t_n_l_p"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_editLop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:text="@string/s_a"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button"
            android:text="@string/hu"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp" />


    </LinearLayout>

</LinearLayout>