<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/th_m_sinh_vi_n"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20dp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/ed_maSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/m_l_p"
            android:maxLength="7"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/ed_hoVaTen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/h_v_t_n"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ed_ngaySinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/ng_y_sinh"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/date_picker_actions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="2dp"
                android:src="@drawable/ic_baseline_date_range_24" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_createSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:text="@string/th_m"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancelSV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/background_button"
            android:text="@string/hu"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="23sp" />


    </LinearLayout>

</LinearLayout>