<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Statusbar"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/btn_Setting"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0.2"
        android:background="@drawable/circle_border"
        android:src="@drawable/ic_android_black_24dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hello_admin"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qu_n_l_sinh_vi_n"
            android:textColor="@color/white"
            android:textSize="26dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.6"
        android:background="@drawable/background_corner_white"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="20dp"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/btn_addLop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/background_item"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.9"
                android:paddingStart="10dp"
                android:text="@string/th_m_l_p"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_add_circle_outline_24" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_addSinhVien"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="2"
            android:background="@drawable/background_item"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.9"
                android:paddingStart="10dp"
                android:text="@string/th_m_sinh_vi_n"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_add_circle_outline_24" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_xemDSLop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/background_item"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.9"

                android:paddingStart="10dp"
                android:text="@string/xem_danh_s_ch_l_p"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_add_circle_outline_24" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_xemDSSinhVien"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            android:layout_weight="2"
            android:background="@drawable/background_item"
            android:orientation="horizontal"
            android:padding="20dp"
            android:weightSum="2">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.9"
                android:paddingStart="10dp"
                android:text="@string/xem_danh_s_ch_sinh_vi_n"
                android:textColor="@color/white"
                android:textSize="23sp"
                android:textStyle="bold" />


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_add_circle_outline_24" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>